--- a/CRM/src/main/resources/application-prod.yaml
+++ b/CRM/src/main/resources/application-prod.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://45.130.43.231:5432/
+    url: jdbc:postgresql://localhost:5432/
     name: ${POSTGRES_DB}
     username: ${POSTGRES_USER}
     password: ${POSTGRES_PASSWORD}
