--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,15 +20,21 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Set up Docker BuildX
+        uses: docker/build-push-action@v3
+
       # Discovery Service
 
       - name: Build Discovery service with Maven
         run: mvn package -Dmaven.test.skip=true --file Discovery-Service/pom.xml
 
       - name: Push Docker Image for Discovery service
-        uses: actions/docker/cli@v3
+        uses: docker/build-push-action@v3
         with:
-          args: push zhmash/case-lab-java-discovery-service:latest
+          push: true
+          platform: linux/amd64
+          file: Discovery-Service/Dockerfile
+          tag: zhmash/case-lab-java-discovery-service:latest
 
       # CRM Service
 
@@ -38,7 +44,10 @@ jobs:
       - name: Push Docker Image for Discovery service
         uses: actions/docker/cli@v3
         with:
-          args: push zhmash/case-lab-java-crm:latest
+          push: true
+          platform: linux/amd64
+          file: CRM/Dockerfile
+          tag: zhmash/case-lab-java-crm:latest
 
       # Client Self Service
 
@@ -48,7 +57,10 @@ jobs:
       - name: Push Docker Image for Discovery service
         uses: actions/docker/cli@v3
         with:
-          args: push zhmash/case-lab-java-client-self-service:latest
+          push: true
+          platform: linux/amd64
+          file: Client-Self-Service/Dockerfile
+          tag: zhmash/case-lab-java-client-self-service:latest
 
 #  deploy:
 #    runs-on: ubuntu-latest
