--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -36,6 +36,9 @@ jobs:
           platform: linux/amd64
           file: ./Discovery-Service/Dockerfile
           tag: zhmash/case-lab-java-discovery-service:latest
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
       # CRM Service
 
@@ -50,6 +53,9 @@ jobs:
           platform: linux/amd64
           file: ./CRM/Dockerfile
           tag: zhmash/case-lab-java-crm:latest
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
       # Client Self Service
 
@@ -64,6 +70,9 @@ jobs:
           platform: linux/amd64
           file: ./Client-Self-Service/Dockerfile
           tag: zhmash/case-lab-java-client-self-service:latest
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
 #  deploy:
 #    runs-on: ubuntu-latest
