--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -31,10 +31,9 @@ jobs:
       - name: Push Docker Image for Discovery service
         uses: docker/build-push-action@v3
         with:
-          context: .
+          context: ./Discovery-Service
           push: true
           platform: linux/amd64
-          file: ./Discovery-Service/Dockerfile
           tag: zhmash/case-lab-java-discovery-service:latest
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
@@ -48,10 +47,9 @@ jobs:
       - name: Push Docker Image for Discovery service
         uses: docker/build-push-action@v3
         with:
-          context: .
+          context: ./CRM
           push: true
           platform: linux/amd64
-          file: ./CRM/Dockerfile
           tag: zhmash/case-lab-java-crm:latest
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
@@ -65,10 +63,9 @@ jobs:
       - name: Push Docker Image for Discovery service
         uses: docker/build-push-action@v3
         with:
-          context: .
+          context: ./Client-Self-Service
           push: true
           platform: linux/amd64
-          file: ./Client-Self-Service/Dockerfile
           tag: zhmash/case-lab-java-client-self-service:latest
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
