--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -33,8 +33,8 @@ jobs:
       - name: Push Docker Image for Discovery service
         uses: docker/build-push-action@v3
         with:
-          context: ./Discovery-Service
-          file: ./Discovery-Service/Dockerfile
+          context: .
+          file: Discovery-Service/Dockerfile
           push: true
           platform: linux/amd64
           tag: zhmash/case-lab-java-discovery-service:latest
@@ -50,10 +50,10 @@ jobs:
       - name: Push Docker Image for Discovery service
         uses: docker/build-push-action@v3
         with:
-          context: ./CRM
+          context: .
           push: true
           platform: linux/amd64
-          file: ./CRM/Dockerfile
+          file: CRM/Dockerfile
           tag: zhmash/case-lab-java-crm:latest
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
@@ -67,10 +67,10 @@ jobs:
       - name: Push Docker Image for Discovery service
         uses: docker/build-push-action@v3
         with:
-          context: ./Client-Self-Service
+          context: .
           push: true
           platform: linux/amd64
-          file: ./Client-Self-Service/Dockerfile
+          file: Client-Self-Service/Dockerfile
           tag: zhmash/case-lab-java-client-self-service:latest
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
