--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,6 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    name: Build Images
 
     steps:
 
@@ -23,7 +24,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Set up Docker BuildX
-        uses: docker/build-push-action@v3
+        uses: docker/setup-buildx-action@v3
 
       # Discovery Service
 
