--- a/CRM/Dockerfile
+++ b/CRM/Dockerfile
@@ -1,5 +1,5 @@
 FROM eclipse-temurin:17-alpine
 WORKDIR .
-COPY /target/CRM-0.0.1-SNAPSHOT.jar CRM.jar
+COPY CRM/target/CRM-0.0.1-SNAPSHOT.jar CRM.jar
 
 ENTRYPOINT ["java","-jar","CRM.jar"]
