--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -76,11 +76,16 @@ jobs:
     needs: build
     steps:
 
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Set up Docker BuildX
+        uses: docker/setup-buildx-action@v3
 #      - name: Install sshpass
 #        run: sudo apt-get install -y sshpass
 
       - name: Pull  Discovery Service Docker Image from DockerHub
-        run: zhmash/case-lab-java-discovery-service:latest
+        run: docker pull zhmash/case-lab-java-discovery-service:latest
 
       - name: Save Discovery Service Docker Image
         run: docker save -o discovery-service.tar zhmash/case-lab-java-discovery-service:latest
