--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,71 +6,71 @@ on:
       - master
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    name: Build Images
 
-#  build:
-#    runs-on: ubuntu-latest
-#    name: Build Images
-#
-#    steps:
-#
-#      - name: Checkout Repository
-#        uses: actions/checkout@v3
-#        with:
-#          ref: master
-#
-#      - name: Login to DockerHub
-#        uses: docker/login-action@v3
-#        with:
-#          username: ${{ secrets.DOCKERHUB_USERNAME }}
-#          password: ${{ secrets.DOCKERHUB_TOKEN }}
-#
-#      - name: Set up Docker BuildX
-#        uses: docker/setup-buildx-action@v3
-#
-#      - name: Set up JDK 17
-#        uses: actions/setup-java@v2
-#        with:
-#          distribution: 'adopt'
-#          java-version: '17'
-#
-#      # Discovery Service
-#
-#      - name: Build Discovery service with Maven
-#        run: mvn package -Dmaven.test.skip=true --file Discovery-Service/pom.xml
-#
-#      - name: Push Docker Image for Discovery service
-#        uses: docker/build-push-action@v3
-#        with:
-#          context: .
-#          file: Discovery-Service/Dockerfile
-#          push: true
-#          tags: zhmash/case-lab-java-discovery-service:latest
-#
-#      # CRM Service
-#
-#      - name: Build CRM service with Maven
-#        run: mvn package -Dmaven.test.skip=true --file CRM/pom.xml
-#
-#      - name: Push Docker Image for CRM service
-#        uses: docker/build-push-action@v3
-#        with:
-#          context: .
-#          push: true
-#          file: CRM/Dockerfile
-#          tags: zhmash/case-lab-java-crm:latest
-#
-#      # Client Self Service
-#
-#      - name: Build Client Self Service with Maven
-#        run: mvn package -Dmaven.test.skip=true --file Client-Self-Service/pom.xml
-#
-#      - name: Push Docker Image for Client Self service
-#        uses: docker/build-push-action@v3
-#        with:
-#          context: .
-#          push: true
-#          file: Client-Self-Service/Dockerfile
-#          tags: zhmash/case-lab-java-client-self-service:latest
+    steps:
+
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+        with:
+          ref: master
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Set up Docker BuildX
+        uses: docker/setup-buildx-action@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '17'
+
+      # Discovery Service
+
+      - name: Build Discovery service with Maven
+        run: mvn package -Dmaven.test.skip=true --file Discovery-Service/pom.xml
+
+      - name: Push Docker Image for Discovery service
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: Discovery-Service/Dockerfile
+          push: true
+          tags: zhmash/case-lab-java-discovery-service:latest
+
+      # CRM Service
+
+      - name: Build CRM service with Maven
+        run: mvn package -Dmaven.test.skip=true --file CRM/pom.xml
+
+      - name: Push Docker Image for CRM service
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          file: CRM/Dockerfile
+          tags: zhmash/case-lab-java-crm:latest
+
+      # Client Self Service
+
+      - name: Build Client Self Service with Maven
+        run: mvn package -Dmaven.test.skip=true --file Client-Self-Service/pom.xml
+
+      - name: Push Docker Image for Client Self service
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          file: Client-Self-Service/Dockerfile
+          tags: zhmash/case-lab-java-client-self-service:latest
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
