--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -81,6 +81,7 @@ jobs:
 
       - name: Set up Docker BuildX
         uses: docker/setup-buildx-action@v3
+
 #      - name: Install sshpass
 #        run: sudo apt-get install -y sshpass
 
@@ -99,9 +100,9 @@ jobs:
           source: ./discovery-service.tar
           target: /home/user/project/discovery-service.tar
 
-#      - name: SSH into Remote Server and Load Docker Image
-#        run: ssh -i ${{ secrets.REMOTE_SERVER_USERNAME }}@${{ secrets.REMOTE_SERVER_HOST }} \
-#          "docker load -i /path/to/destination/image.tar"
+      - name: SSH into Remote Server and Load Docker Image
+        run: ssh -i ${{ secrets.REMOTE_SERVER_USERNAME }}@${{ secrets.REMOTE_SERVER_HOST }} \
+          "docker load -i /path/to/destination/image.tar"
 
 #      - name: Run Discovery Service Container on Remote Server
 #        run: |
