--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -82,8 +82,8 @@ jobs:
       - name: Set up Docker BuildX
         uses: docker/setup-buildx-action@v3
 
-#      - name: Install sshpass
-#        run: sudo apt-get install -y sshpass
+      - name: Install sshpass
+        run: sudo apt-get install -y sshpass
 
       - name: Pull  Discovery Service Docker Image from DockerHub
         run: docker pull zhmash/case-lab-java-discovery-service:latest
@@ -96,13 +96,13 @@ jobs:
         with:
           host: ${{ secrets.REMOTE_SERVER_HOST }}
           username: ${{ secrets.REMOTE_SERVER_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          password: ${{ secrets.SSH_PASSWORD }}
           source: ./discovery-service.tar
           target: /home/user/project/discovery-service.tar
 
-      - name: SSH into Remote Server and Load Docker Image
-        run: ssh -i ${{ secrets.REMOTE_SERVER_USERNAME }}@${{ secrets.REMOTE_SERVER_HOST }} \
-          "docker load -i /path/to/destination/image.tar"
+#      - name: SSH into Remote Server and Load Docker Image
+#        run: ssh -i ${{ secrets.REMOTE_SERVER_USERNAME }}@${{ secrets.REMOTE_SERVER_HOST }} \
+#          "docker load -i /path/to/destination/image.tar"
 
 #      - name: Run Discovery Service Container on Remote Server
 #        run: |
