--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -98,7 +98,7 @@ jobs:
           username: ${{ secrets.REMOTE_SERVER_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           source: ./discovery-service.tar
-          target: /home/user/project/discovery-service.tar
+          target: /home/user/project
 
 #      - name: SSH into Remote Server and Load Docker Image
 #        run: ssh -i ${{ secrets.REMOTE_SERVER_USERNAME }}@${{ secrets.REMOTE_SERVER_HOST }} \
