--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -91,6 +91,10 @@ jobs:
       - name: Save Discovery Service Docker Image
         run: docker save -o discovery-service.tar zhmash/case-lab-java-discovery-service:latest
 
+      - name: Remove Existing Tar File on Remote Server
+        run: sshpass -p ${{ secrets.SSH_PASSWORD }} 
+          ssh ${{ secrets.REMOTE_SERVER_USERNAME }}@${{ secrets.REMOTE_SERVER_HOST }} 'rm -f /home/user/project/discovery-service.tar'
+
       - name: Copy Discovery Service Image to Remote Server
         uses: appleboy/scp-action@master
         with:
@@ -98,7 +102,7 @@ jobs:
           username: ${{ secrets.REMOTE_SERVER_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           source: ./discovery-service.tar
-          target: /home/user/project
+          target: /home/user/project/discovery-service.tar
 
 #      - name: SSH into Remote Server and Load Docker Image
 #        run: ssh -i ${{ secrets.REMOTE_SERVER_USERNAME }}@${{ secrets.REMOTE_SERVER_HOST }} \
