--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -91,8 +91,11 @@ jobs:
       - name: Save Discovery Service Docker Image
         run: docker save -o discovery-service.tar zhmash/case-lab-java-discovery-service:latest
 
+      - name: Set SSHPASS environment variable
+        run: echo "::set-env name=SSHPASS::${{ secrets.SSH_PASSWORD }}"
+
       - name: Remove Existing Tar File on Remote Server
-        run: sshpass -p ${{ secrets.SSH_PASSWORD }} ssh ${{ secrets.REMOTE_SERVER_USERNAME }}@${{ secrets.REMOTE_SERVER_HOST }} 'rm -f /home/user/project/discovery-service.tar'
+        run: sshpass -e ssh ${{ secrets.REMOTE_SERVER_USERNAME }}@${{ secrets.REMOTE_SERVER_HOST }} 'rm -f /home/user/project/discovery-service.tar'
 
       - name: Copy Discovery Service Image to Remote Server
         uses: appleboy/scp-action@master
