--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -79,38 +79,13 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Set up Docker BuildX
-        uses: docker/setup-buildx-action@v3
-
-      - name: Install sshpass
-        run: sudo apt-get install -y sshpass
-
-      - name: Pull  Discovery Service Docker Image from DockerHub
-        run: docker pull zhmash/case-lab-java-discovery-service:latest
-
-      - name: Save Discovery Service Docker Image
-        run: docker save -o discovery-service.tar zhmash/case-lab-java-discovery-service:latest
-
-      - name: Set SSHPASS environment variable
-        run: echo "::set-env name=SSHPASS::${{ secrets.SSH_PASSWORD }}"
-
-      - name: Remove Existing Tar File on Remote Server
-        run: sshpass -e ssh ${{ secrets.REMOTE_SERVER_USERNAME }}@${{ secrets.REMOTE_SERVER_HOST }} 'rm -f /home/user/project/discovery-service.tar'
-
-      - name: Copy Discovery Service Image to Remote Server
-        uses: appleboy/scp-action@master
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.5.4
         with:
-          host: ${{ secrets.REMOTE_SERVER_HOST }}
-          username: ${{ secrets.REMOTE_SERVER_USERNAME }}
-          password: ${{ secrets.SSH_PASSWORD }}
-          source: ./discovery-service.tar
-          target: /home/user/project/discovery-service.tar
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-#      - name: SSH into Remote Server and Load Docker Image
-#        run: ssh -i ${{ secrets.REMOTE_SERVER_USERNAME }}@${{ secrets.REMOTE_SERVER_HOST }} \
-#          "docker load -i /path/to/destination/image.tar"
-
-#      - name: Run Discovery Service Container on Remote Server
-#        run: |
-#          ssh -i ${{ secrets.SSH_PRIVATE_KEY }} ${{ secrets.REMOTE_SERVER_USERNAME }}@${{ secrets.REMOTE_SERVER_HOST }} \
-#                      "docker run -d -p 8080:80 zhmash/case-lab-java-discovery-service:latest"
+      - name: Deploy to remote server
+        run: |
+          ssh -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY_PATH }} root@45.130.43.231 'docker pull zhmash/case-lab-java-client-self-service:latest'
+          ssh -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY_PATH }} root@45.130.43.231 'docker run -d --name self-client-service zhmash/case-lab-java-client-self-service:latest'
+          
