--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -87,4 +87,8 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           script: |
             docker pull zhmash/case-lab-java-client-self-service:latest
-            docker run -d --name self-client-service -p 8081:8081 zhmash/case-lab-java-client-self-service:latest
+            docker run -d --name self-client-service -p 8081:8081 
+            -e CLIENT_ACCESS_TOKEN=${{ CLIENT_ACCESS_TOKEN }} 
+            -e CLIENT_ACCESS_TOKEN=${{ CLIENT_REFRESH_TOKEN }} 
+            -e CLIENT_ACCESS_TOKEN=${{ JWT_TECHNICAL_USER }}
+            zhmash/case-lab-java-client-self-service:latest
