--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,83 +6,139 @@ on:
       - master
 
 jobs:
-#  build:
-#    runs-on: ubuntu-latest
-#    name: Build Images
-#
-#    steps:
-#
-#      - name: Checkout Repository
-#        uses: actions/checkout@v3
-#        with:
-#          ref: master
-#
-#      - name: Login to DockerHub
-#        uses: docker/login-action@v3
-#        with:
-#          username: ${{ secrets.DOCKERHUB_USERNAME }}
-#          password: ${{ secrets.DOCKERHUB_TOKEN }}
-#
-#      - name: Set up Docker BuildX
-#        uses: docker/setup-buildx-action@v3
-#
-#      - name: Set up JDK 17
-#        uses: actions/setup-java@v2
-#        with:
-#          distribution: 'adopt'
-#          java-version: '17'
-#
-#      # Discovery Service
-#
-#      - name: Build Discovery service with Maven
-#        run: mvn package -Dmaven.test.skip=true --file Discovery-Service/pom.xml
-#
-#      - name: Push Docker Image for Discovery service
-#        uses: docker/build-push-action@v3
-#        with:
-#          context: .
-#          file: Discovery-Service/Dockerfile
-#          push: true
-#          tags: zhmash/case-lab-java-discovery-service:latest
-#
-#      # CRM Service
-#
-#      - name: Build CRM service with Maven
-#        run: mvn package -Dmaven.test.skip=true --file CRM/pom.xml
-#
-#      - name: Push Docker Image for CRM service
-#        uses: docker/build-push-action@v3
-#        with:
-#          context: .
-#          push: true
-#          file: CRM/Dockerfile
-#          tags: zhmash/case-lab-java-crm:latest
-#
-#      # Client Self Service
-#
-#      - name: Build Client Self Service with Maven
-#        run: mvn package -Dmaven.test.skip=true --file Client-Self-Service/pom.xml
-#
-#      - name: Push Docker Image for Client Self service
-#        uses: docker/build-push-action@v3
-#        with:
-#          context: .
-#          push: true
-#          file: Client-Self-Service/Dockerfile
-#          tags: zhmash/case-lab-java-client-self-service:latest
+  build:
+    runs-on: ubuntu-latest
+    name: Build Images
+
+    steps:
+
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+        with:
+          ref: master
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Set up Docker BuildX
+        uses: docker/setup-buildx-action@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '17'
+
+      # Discovery Service
+
+      - name: Build Discovery service with Maven
+        run: mvn package -Dmaven.test.skip=true --file Discovery-Service/pom.xml
+
+      - name: Push Docker Image for Discovery service
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: Discovery-Service/Dockerfile
+          push: true
+          tags: zhmash/case-lab-java-discovery-service:latest
+
+      # CRM Service
+
+      - name: Build CRM service with Maven
+        run: mvn package -Dmaven.test.skip=true --file CRM/pom.xml
+
+      - name: Push Docker Image for CRM service
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          file: CRM/Dockerfile
+          tags: zhmash/case-lab-java-crm:latest
+
+      # Client Self Service
+
+      - name: Build Client Self Service with Maven
+        run: mvn package -Dmaven.test.skip=true --file Client-Self-Service/pom.xml
+
+      - name: Push Docker Image for Client Self service
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          file: Client-Self-Service/Dockerfile
+          tags: zhmash/case-lab-java-client-self-service:latest
 
   deploy:
     runs-on: ubuntu-latest
-#    needs: build
+    needs: build
     steps:
 
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Connect with SSH and Deploy
+      - name: Stop containers
         uses: appleboy/ssh-action@v0.1.8
         with:
-          host: 45.130.43.231
+          host: ${{ secrets.REMOTE_SERVER_HOST }}
+          username: ${{ secrets.REMOTE_SERVER_USERNAME }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          script: |
+            docker stop discovery-service
+            docker rm discovery-service
+            docker stop crm-service
+            docker rm crm-service
+            docker stop self-client-service
+            docker rm self-client-service
+            docker rmi zhmash/case-lab-java-discovery-service:latest
+            docker rmi zhmash/case-lab-java-crm:latest
+            docker rmi zhmash/case-lab-java-client-self-service:latest
+
+      # Discovery Service
+
+      - name: Deploy Discovery Service
+        uses: appleboy/ssh-action@v0.1.8
+        with:
+          host: ${{ secrets.REMOTE_SERVER_HOST }}
+          username: ${{ secrets.REMOTE_SERVER_USERNAME }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          script: |
+            docker pull zhmash/case-lab-java-discovery-service:latest
+            docker run -d --name discovery-service -p 8761:8761 zhmash/case-lab-java-client-self-service:latest
+
+      # CRM service
+
+      - name: Deploy CRM Service
+        uses: appleboy/ssh-action@v0.1.8
+        with:
+          host: ${{ secrets.REMOTE_SERVER_HOST }}
+          username: ${{ secrets.REMOTE_SERVER_USERNAME }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          script: |
+            docker pull zhmash/case-lab-java-crm:latest
+            docker run -d --name crm-service -p 8080:8080 \
+            -e JWT_TECHNICAL_USER=${{ secrets.JWT_TECHNICAL_USER }} \
+            -e MAIL_USERNAME=${{ secrets.MAIL_USERNAME }} \
+            -e MAIL_PORT=${{ secrets.MAIL_PORT }} \
+            -e MAIL_PASSWORD=${{ secrets.MAIL_PASSWORD }} \
+            -e POSTGRES_DB=${{ secrets.POSTGRES_DB }} \
+            -e POSTGRES_USER=${{ secrets.POSTGRES_USER }} \
+            -e POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} \
+            -e ACCESS_TOKEN=${{ secrets.ACCESS_TOKEN }} \
+            -e REFRESH_TOKEN=${{ secrets.REFRESH_TOKEN }} \
+            -e MINIO_ACCESS=${{ secrets.MINIO_ACCESS }} \
+            -e MINIO_SECRET=${{ secrets.MINIO_SECRET }} \
+            -e MINIO_URL=${{ secrets.MINIO_URL }} \
+            zhmash/case-lab-java-client-self-service:latest
+
+      # Client Self Service
+
+      - name: Deploy Client Self Service
+        uses: appleboy/ssh-action@v0.1.8
+        with:
+          host: ${{ secrets.REMOTE_SERVER_HOST }}
           username: ${{ secrets.REMOTE_SERVER_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           script: |
