--- a/Client-Self-Service/src/main/resources/application-prod.yml
+++ b/Client-Self-Service/src/main/resources/application-prod.yml
@@ -3,7 +3,7 @@ spring:
     name: client-self-service
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/self-client
+    url: jdbc:postgresql://5.35.83.16:5432/self-client
     username: ${POSTGRES_USER}
     password: ${POSTGRES_PASSWORD}
   jpa:
