--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -106,7 +106,7 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           script: |
             docker pull zhmash/case-lab-java-discovery-service:latest
-            docker run -d --name discovery-service -p 8761:8761 zhmash/case-lab-java-client-self-service:latest
+            docker run -d --name discovery-service -p 8761:8761 zhmash/case-lab-java-discovery-service:latest
 
       # CRM service
 
@@ -131,7 +131,7 @@ jobs:
             -e MINIO_ACCESS=${{ secrets.MINIO_ACCESS }} \
             -e MINIO_SECRET=${{ secrets.MINIO_SECRET }} \
             -e MINIO_URL=${{ secrets.MINIO_URL }} \
-            zhmash/case-lab-java-client-self-service:latest
+            docker pull zhmash/case-lab-java-crm:latest
 
       # Client Self Service
 
